--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Canvas</title>
 </head>
 <body>
+    <div >
+        <button id="btn">Start</button>
+        <span id="score"></span>
+        <button id="st">Stop</button>
+    </div>
     <canvas></canvas>
     <script src="./gravity.js"></script>
 </body>
